<resources>
    <string name="app_name">Poli_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Maria Jose M.</string>
    <string name="nav_header_subtitle">"@mjmpuerta"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mi Perfil</string>
    <string name="menu_slideshow">Mis Fotos</string>
    <string name="menu_video">Mis Videos</string>
    <string name="menu_web_">Web</string>
    <string name="menu_botones">Botones</string>
    <string name="nombre">Nombre</string>
    <string name="perfil">PERFIL</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="usuario">Usuario</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="politikect">POLITIKECT</string>
    <string name="guardar">Guardar</string>
    <string name="descripci_n">Descripción</string>
    <string name="t_tulo">Título</string>
    <string name="agregar_foto">Agregar foto</string>

</resources>