<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_fotos"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_video" />

        <item
            android:id="@+id/nav_web_"
            android:icon="@drawable/ice_menu_web"
            android:title="@string/menu_web_" />
        <item
            android:id="@+id/nav_botones"
            android:icon="@drawable/ice_menu_boton"
            android:title="@string/menu_botones" />


    </group>
</menu>